# us-bulk-supply-chain-platform

./: .gitignore  ARCHITECTURE_PROPOSAL_V2.md  AUTONOMOUS_SESSION_COMPLETE_2026-02-23.md  CLAUDE.md  HANDOFF.md  INTEGRATION_PROMPT.md  MASTER_PORTAL.html  MRTIS_MARITIME_VOYAGE_ANALYSIS.html  Master_Presentation_Comprehensive.html  PANJIVA_ANALYSIS_SUMMARY.md  PANJIVA_CHARTS_QUICKSTART.md  Panjiva_Commodity_Trends_Charts.html  README.md  SESSION_SUMMARY_2026-02-23_AUTONOMOUS.md  UNIFIED_INVESTOR_PRESENTATION.html  US_Bulk_Supply_Chain_Platform_Overview.html  VERIFICATION_REPORT_project_manifest.md  VERIFICATION_REPORT_project_rail.md  analyze_panjiva_trends.py  config.yaml  pyproject.toml  requirements.txt
02_TOOLSETS/: README.md
03_COMMODITY_MODULES/: HANDOFF.md  README.md  generate_pdfs.py
04_REPORTS/: README.md  class1_railroad_corridors.docx
05_DOCUMENTATION/: Access_Guide_Barge_Research.md  Complete_Access_Guide_Wetzstein_Dissertation.md  DIRECTORY_STRUCTURE.md  EIA_Datasets_Catalog.md  FGDC_Datasets_Catalog.md  FGDC_README.md  FGDC_Summary_Report.md  INDEX_MASTER.md  INDEX_OF_DOCUMENTATION.md  INVENTORY_12_PROJECTS.md  Implementation_Toolkit_Code_Templates.md  Inland_Barge_Transportation_Economics_Research_Compendium.md  MASTER_FACILITY_REGISTER_CONCEPT.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  MIGRATION_VERIFICATION_REPORT.md  Mississippi_River_Inland_Waterway_Data_Sources.md  NAICS_HTS_CODES.md  PIPELINE_RULES.md  PROJECT_BARGE_VERIFICATION.md  README.md  RESEARCH_SUMMARY_QuickStart.md  River_Econ.csv  SOURCES_DATA_MAPS_VERIFICATION.md  USACE_QUICKSTART.md  (+15 more)
(+1448 files in other folders)
